--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -281,6 +281,9 @@ nav {
 
 #landing {
   position: relative;
+  width: 100%;
+  height: 100vh;
+  clip-path: circle(8%);
 }
 
 .landing-image {
@@ -297,6 +300,7 @@ nav {
   text-align: right;
   margin-right: 1rem;
   text-shadow: 2px 2px 6px #001f3fb3;
+  z-index: 10;
 }
 
 #bar-to-spotify {
@@ -306,6 +310,23 @@ nav {
   transform: translateX(-50%);
   width: 60vw;
   padding: 1rem 2rem;
+  z-index: 10;
+}
+
+.guitar-svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.blend {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  opacity: 0.5;
+  background-color: #aea397;
 }
 
 /* Listen section */
