--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -59,6 +59,7 @@ ul {
 
 .full-area {
   height: 100vh;
+  height: var(--app-height);
 }
 
 /* Custom Font Family */
@@ -312,6 +313,7 @@ nav {
   position: relative;
   width: 100%;
   height: 100vh;
+  height: var(--app-height);
 }
 
 .landing-image {
