Added button link to song lyrics website

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -402,6 +402,12 @@ nav {
   font-size: 2rem;
 }
 
+.link-to-lyrics {
+  height: 10rem;
+  text-align: center;
+  overflow: visible;
+}
+
 /* Watch section */
 
 #watch {
