--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -580,6 +580,13 @@ small {
   transform: translate(-50%, -50%);
 }
 
+.footer-bluebliss:hover,
+.footer-bluebliss a:hover {
+  color: #ffffff;
+  box-shadow: none;
+  background: inherit;
+}
+
 /* Media Query */
 
 @media screen and (min-width: 360px) {
@@ -614,7 +621,7 @@ small {
   .songs-grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr) [3];
+    -ms-grid-columns: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
   }
   #contact-section {
@@ -711,7 +718,7 @@ small {
     display: grid;
     -ms-grid-rows: auto;
     grid-template-rows: auto;
-    -ms-grid-columns: (1fr) [3];
+    -ms-grid-columns: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
   }
 
